pom.xml fix